Fixed Errors Add text-align and color to stylesheet

--- a/foundations/intro-to-css/01-css-methods/style.css
+++ b/foundations/intro-to-css/01-css-methods/style.css
@@ -6,4 +6,6 @@
 div {
 	background-color: red;
 	font-size: 32px;
+	color: white;
+	text-align: center
 }
